# qrcode_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/qrcode_mcp/: __init__.py  __main__.py  generator.py  server.py
