[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrcode-mcp"
version = "0.1.0"
description = "An MCP server that generates awesome, stylish QR codes — with custom colors, gradients, logos, shapes, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "muldercw" },
]
keywords = ["mcp", "qrcode", "qr", "generator", "styled", "design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "fastmcp>=2.0.0",
    "qrcode[pil]>=8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
qrcode-mcp = "qrcode_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/muldercw/qrcode_mcp"
Repository = "https://github.com/muldercw/qrcode_mcp"
Issues = "https://github.com/muldercw/qrcode_mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qrcode_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/qrcode_mcp"]

[tool.qrcode-mcp]
output_dir = "qrcodes"
default_size = 10
default_border = 2
default_format = "png"

[tool.ruff]
line-length = 100
target-version = "py310"
